--- a/apiZetta/src/main/resources/application.properties
+++ b/apiZetta/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
-#Banco Local
+#Banco Local Camila
 spring.datasource.url= jdbc:postgresql://localhost:5432/zetta
 spring.datasource.username=camila
 spring.datasource.password=26camila
