--- a/apiZetta/src/main/resources/application.properties
+++ b/apiZetta/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
 #Banco Local Camila
-spring.datasource.url= jdbc:postgresql://localhost:5432/zetta
+spring.datasource.url= jdbc:postgresql://localhost:5432/zettaApi
 spring.datasource.username=camila
 spring.datasource.password=26camila
 spring.jpa.hibernate.ddl-auto=update
