--- a/apiZetta/src/main/resources/application.properties
+++ b/apiZetta/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 #Banco Local Camila
-spring.datasource.url= jdbc:postgresql://localhost:5432/zettaApi
+spring.datasource.url= jdbc:postgresql://localhost:5432/zettaAplicacao
 spring.datasource.username=camila
 spring.datasource.password=26camila
 spring.jpa.hibernate.ddl-auto=update
